syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductPromoProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Product Promotion
message ProductPromoFlatData {
    option (routines.entity_type) = "ProductPromo";
    option (routines.keys).keys = "product_promo_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productPromoId
    string product_promo_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string promo_name = 2 [(routines.opts).field_type = "name"];
    string promo_text = 3 [(routines.opts).field_type = "description"];
    routines.Indicator user_entered = 4 [(routines.opts).field_type = "indicator"];
    routines.Indicator show_to_customer = 5 [(routines.opts).field_type = "indicator"];
    routines.Indicator require_code = 6 [(routines.opts).field_type = "indicator"];
    int64 use_limit_per_order = 7 [(routines.opts).field_type = "numeric"];
    int64 use_limit_per_customer = 8 [(routines.opts).field_type = "numeric"];
    int64 use_limit_per_promotion = 9 [(routines.opts).field_type = "numeric"];
    routines.FixedPoint billback_factor = 10 [(routines.opts).field_type = "fixed-point"];
    string override_org_party_id = 11 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp created_date = 12 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 13 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 14 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 15 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 16 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 17 [(routines.opts).field_type = "date-time"];
    string tenant_id = 18 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 37;
    map<string, google.protobuf.Any> attachments = 38 ;
}

message ProductPromoKey{
    string product_promo_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ProductPromoList{
    repeated ProductPromoFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductPromos` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Product Promotion Action
message ProductPromoActionData {
    option (routines.entity_type) = "ProductPromoAction";
    option (routines.keys).keys = "product_promo_id, product_promo_rule_id, product_promo_action_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productPromoId, productPromoRuleId, productPromoActionSeqId
    // fields
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string product_promo_action_seq_id = 3 [(routines.opts).field_type = "id"];
    string product_promo_action_enum_id = 4 [(routines.opts).field_type = "id"];
    string custom_method_id = 5 [(routines.opts).field_type = "id"];
    string order_adjustment_type_id = 6 [(routines.opts).field_type = "id"];
    string service_name = 7 [(routines.opts).field_type = "long-varchar"];
    routines.FixedPoint quantity = 8 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint amount = 9 [(routines.opts).field_type = "fixed-point"];
    string product_id = 10 [(routines.opts).field_type = "id"];
    string party_id = 11 [(routines.opts).field_type = "id"];
    routines.Indicator use_cart_quantity = 12 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp last_updated_tx_stamp = 13 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    string id = 15 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 26;
    map<string, google.protobuf.Any> attachments = 27;
}


message ProductPromoActionKey{
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string product_promo_action_seq_id = 3 [(routines.opts).field_type = "id"];
}

message ProductPromoActionList{
    repeated ProductPromoActionData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductPromoActions` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Product Promotion Category
message ProductPromoCategoryData {
    option (routines.entity_type) = "ProductPromoCategory";
    option (routines.keys).keys = "product_promo_id, product_promo_rule_id, product_promo_action_seq_id, product_promo_cond_seq_id, product_category_id, and_group_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productPromoId, productPromoRuleId, productPromoActionSeqId, productPromoCondSeqId, productCategoryId, andGroupId
    // fields
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string product_promo_action_seq_id = 3 [(routines.opts).field_type = "id"];
    string product_promo_cond_seq_id = 4 [(routines.opts).field_type = "id"];
    string product_category_id = 5 [(routines.opts).field_type = "id"];
    string and_group_id = 6 [(routines.opts).field_type = "id"];
    string product_promo_appl_enum_id = 7 [(routines.opts).field_type = "id"];
    routines.Indicator include_sub_categories = 8 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 15;
    map<string, google.protobuf.Any> attachments = 16;
}


message ProductPromoCategoryKey{
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string product_promo_action_seq_id = 3 [(routines.opts).field_type = "id"];
    string product_promo_cond_seq_id = 4 [(routines.opts).field_type = "id"];
    string product_category_id = 5 [(routines.opts).field_type = "id"];
    string and_group_id = 6 [(routines.opts).field_type = "id"];
}

message ProductPromoCategoryList{
    repeated ProductPromoCategoryData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductPromoCategories` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Product Promotion
message ProductPromoCodeFlatData {
    option (routines.entity_type) = "ProductPromoCode";
    option (routines.keys).keys = "product_promo_code_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productPromoCodeId
    string product_promo_code_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string product_promo_id = 2 [(routines.opts).field_type = "id"];
    routines.Indicator user_entered = 3 [(routines.opts).field_type = "indicator"];
    routines.Indicator require_email_or_party = 4 [(routines.opts).field_type = "indicator"];
    int64 use_limit_per_code = 5 [(routines.opts).field_type = "numeric"];
    int64 use_limit_per_customer = 6 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp from_date = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 8 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_date = 9 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 10 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 11 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 12 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 13 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    string tenant_id = 15 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 26;
    map<string, google.protobuf.Any> attachments = 27 ;
}

message ProductPromoCodeKey{
    string product_promo_code_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ProductPromoCodeList{
    repeated ProductPromoCodeFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductPromoCodes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Product Promotion Condition
message ProductPromoCondData {
    option (routines.entity_type) = "ProductPromoCond";
    option (routines.keys).keys = "product_promo_id, product_promo_rule_id, product_promo_cond_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productPromoId, productPromoRuleId, productPromoCondSeqId
    // fields
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string product_promo_cond_seq_id = 3 [(routines.opts).field_type = "id"];
    string custom_method_id = 4 [(routines.opts).field_type = "id"];
    string input_param_enum_id = 5 [(routines.opts).field_type = "id"];
    string operator_enum_id = 6 [(routines.opts).field_type = "id"];
    string cond_value = 7 [(routines.opts).field_type = "long-varchar"];
    string other_value = 8 [(routines.opts).field_type = "long-varchar"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 19;
    map<string, google.protobuf.Any> attachments = 20;
}


message ProductPromoCondKey{
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string product_promo_cond_seq_id = 3 [(routines.opts).field_type = "id"];
}

message ProductPromoCondList{
    repeated ProductPromoCondData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductPromoConds` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Product Promotion Category
message ProductPromoProductData {
    option (routines.entity_type) = "ProductPromoProduct";
    option (routines.keys).keys = "product_promo_id, product_promo_rule_id, product_promo_action_seq_id, product_promo_cond_seq_id, product_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productPromoId, productPromoRuleId, productPromoActionSeqId, productPromoCondSeqId, productId
    // fields
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string product_promo_action_seq_id = 3 [(routines.opts).field_type = "id"];
    string product_promo_cond_seq_id = 4 [(routines.opts).field_type = "id"];
    string product_id = 5 [(routines.opts).field_type = "id"];
    string product_promo_appl_enum_id = 6 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    string id = 9 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message ProductPromoProductKey{
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string product_promo_action_seq_id = 3 [(routines.opts).field_type = "id"];
    string product_promo_cond_seq_id = 4 [(routines.opts).field_type = "id"];
    string product_id = 5 [(routines.opts).field_type = "id"];
}

message ProductPromoProductList{
    repeated ProductPromoProductData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductPromoProducts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Product Promotion Rule
message ProductPromoRuleData {
    option (routines.entity_type) = "ProductPromoRule";
    option (routines.keys).keys = "product_promo_id, product_promo_rule_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productPromoId, productPromoRuleId
    // fields
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
    string rule_name = 3 [(routines.opts).field_type = "name"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message ProductPromoRuleKey{
    string product_promo_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 2 [(routines.opts).field_type = "id"];
}

message ProductPromoRuleList{
    repeated ProductPromoRuleData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductPromoRules` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


